# deepseek-rs

./: Cargo.toml  README.md
examples/: balance.rs  hello.rs  model_list.rs
src/: http.rs  lib.rs
src/base_types/: data.rs  mod.rs
src/chat/: mod.rs  request.rs  response.rs
src/model/: mod.rs  request.rs  response.rs
src/user/: mod.rs  request.rs  response.rs
